--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "dependencies": {
+        "@google-ai/generativelanguage": "^2.6.0",
         "@google/generative-ai": "^0.5.0",
         "async": "^3.2.5",
         "discord.js": "^14.14.1",
         "dotenv": "^16.4.5",
-        "express": "^4.19.2"
+        "express": "^4.19.2",
+        "google-auth-library": "^9.11.0"
     }
 }
