--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
         "@google-ai/generativelanguage": "^2.6.0",
         "@google/generative-ai": "^0.5.0",
         "async": "^3.2.5",
+        "body-parser": "^1.20.2",
         "discord.js": "^14.14.1",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
-        "google-auth-library": "^9.11.0"
+        "google-auth-library": "^9.11.0",
+        "mysql": "^2.18.1",
+        "mysql2": "^3.10.3",
+        "nodemon": "^3.1.4"
+    },
+    "scripts": {
+        "start": "nodemon index.js",
+        "start:deploy": "nodemon index.js && node deploy-command.js"
     }
 }
