--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "google-auth-library": "^9.11.0",
         "mysql": "^2.18.1",
         "mysql2": "^3.10.3",
+        "node-fetch": "^3.3.2",
         "nodemon": "^3.1.4"
     },
     "scripts": {
