--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
         "@google/generative-ai": "^0.5.0",
         "async": "^3.2.5",
         "body-parser": "^1.20.2",
+        "canvas": "^2.11.2",
         "discord.js": "^14.14.1",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "form-data": "^4.0.0",
         "google-auth-library": "^9.11.0",
         "mysql": "^2.18.1",
         "mysql2": "^3.10.3",
         "node-fetch": "^3.3.2",
-        "nodemon": "^3.1.4"
+        "nodemon": "^3.1.4",
+        "pdf-lib": "^1.17.1"
     },
     "scripts": {
         "start": "nodemon index.js",
