--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "@google-ai/generativelanguage": "^2.6.0",
         "@google/generative-ai": "^0.5.0",
         "async": "^3.2.5",
+        "axios": "^1.7.2",
         "body-parser": "^1.20.2",
         "canvas": "^2.11.2",
         "discord.js": "^14.14.1",
